[package]
name = "linear_system_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.2"
egui = "0.34.2"
egui_extras = "0.34.2"
env_logger = "0.11.10"

[profile.final]
inherits = "release"
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
lto = "fat"
strip = true

[profile.final.package."*"]
opt-level = 3
codegen-units = 1
strip = true
